NTI-6024 fix the spacing with the pager

--- a/src/components/toolbar/CurrentPage.scss
+++ b/src/components/toolbar/CurrentPage.scss
@@ -3,6 +3,7 @@
 .nti-content-toolbar-current-page {
 	display: inline-block;
 	width: 60px;
+	text-align: right;
 
 	.nti-select-input {
 		text-align: right;
