--- a/src/components/toolbar/Toolbar.scss
+++ b/src/components/toolbar/Toolbar.scss
@@ -24,6 +24,7 @@
 		display: flex;
 		flex-direction: row;
 		align-items: center;
+		padding-right: 0.3rem;
 
 		.page {
 			flex: 0 0 auto;
@@ -42,7 +43,7 @@
 			flex: 0 0 auto;
 			cursor: pointer;
 			display: inline-block;
-			width: 40px;
+			width: 38px;
 			padding-top: 18px;
 			font-size: 22px;
 			line-height: 0;
@@ -65,7 +66,7 @@
 		.prev {
 			background-image: url(assets/arrow-up.png);
 
-			&.disabled::after {
+			&.disabled {
 				background-image: url(assets/arrow-up_inactive.png);
 			}
 		}
@@ -73,7 +74,7 @@
 		.next {
 			background-image: url(assets/arrow-down.png);
 
-			&.disabled::after {
+			&.disabled {
 				background-image: url(assets/arrow-down_inactive.png);
 			}
 		}
